Update problem 2674